{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 65,
  "lineage": "0a56f533-50f9-838d-e87a-c8d131cc7bb8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-083a7cb2f6a1b78a5",
            "arn": "arn:aws:ec2:us-east-1:654654482536:elastic-ip/eipalloc-083a7cb2f6a1b78a5",
            "domain": "vpc",
            "id": "eipalloc-083a7cb2f6a1b78a5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-225-157-248.compute-1.amazonaws.com",
            "public_ip": "54.225.157.248",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internetGateway",
            "aws_vpc.eksvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internetGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654482536:internet-gateway/igw-0e95be50055f0fae1",
            "id": "igw-0e95be50055f0fae1",
            "owner_id": "654654482536",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0c565723e5aec997a"
          },
          "dependencies": [
            "aws_vpc.eksvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-083a7cb2f6a1b78a5",
            "association_id": "eipassoc-04dba44834817c091",
            "connectivity_type": "public",
            "id": "nat-0e128eb48386fb67b",
            "network_interface_id": "eni-097bf74cc7c2fa8c8",
            "private_ip": "10.0.0.173",
            "public_ip": "54.225.157.248",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e34d4ab8f799c81d",
            "tags": {
              "Name": "ngw"
            },
            "tags_all": {
              "Name": "ngw"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.internetGateway",
            "aws_subnet.ps1",
            "aws_vpc.eksvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroute_privatesubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654482536:route-table/rtb-0e3c90daa80756ad5",
            "id": "rtb-0e3c90daa80756ad5",
            "owner_id": "654654482536",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e128eb48386fb67b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "privateroute_privatesubnet1"
            },
            "tags_all": {
              "Name": "privateroute_privatesubnet1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c565723e5aec997a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.internetGateway",
            "aws_nat_gateway.natGateway",
            "aws_subnet.ps1",
            "aws_vpc.eksvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroute_privatesubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654482536:route-table/rtb-08b93b7badf2ea1a1",
            "id": "rtb-08b93b7badf2ea1a1",
            "owner_id": "654654482536",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e128eb48386fb67b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "privateroute_privatesubnet2"
            },
            "tags_all": {
              "Name": "privateroute_privatesubnet2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c565723e5aec997a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.internetGateway",
            "aws_nat_gateway.natGateway",
            "aws_subnet.ps1",
            "aws_vpc.eksvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroute_ps1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654482536:route-table/rtb-0f80163f2bd6c0cee",
            "id": "rtb-0f80163f2bd6c0cee",
            "owner_id": "654654482536",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e95be50055f0fae1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicroute_ps1"
            },
            "tags_all": {
              "Name": "publicroute_ps1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c565723e5aec997a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internetGateway",
            "aws_vpc.eksvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroute_ps2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654482536:route-table/rtb-07e854cc0d8cdbf1f",
            "id": "rtb-07e854cc0d8cdbf1f",
            "owner_id": "654654482536",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e95be50055f0fae1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-ps2"
            },
            "tags_all": {
              "Name": "public-ps2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c565723e5aec997a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internetGateway",
            "aws_vpc.eksvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e9d17e127df6458",
            "route_table_id": "rtb-0e3c90daa80756ad5",
            "subnet_id": "subnet-04aeab193f540edd7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.internetGateway",
            "aws_nat_gateway.natGateway",
            "aws_route_table.privateroute_privatesubnet1",
            "aws_subnet.private_subnet1",
            "aws_subnet.ps1",
            "aws_vpc.eksvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057f87b93930d0f92",
            "route_table_id": "rtb-08b93b7badf2ea1a1",
            "subnet_id": "subnet-092c8d14f0f181fe2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.internetGateway",
            "aws_nat_gateway.natGateway",
            "aws_route_table.privateroute_privatesubnet2",
            "aws_subnet.private_subnet2",
            "aws_subnet.ps1",
            "aws_vpc.eksvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0feefa496af4fd9f5",
            "route_table_id": "rtb-0f80163f2bd6c0cee",
            "subnet_id": "subnet-0e34d4ab8f799c81d"
          },
          "dependencies": [
            "aws_internet_gateway.internetGateway",
            "aws_route_table.publicroute_ps1",
            "aws_subnet.ps1",
            "aws_vpc.eksvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0598be54c12d80cd3",
            "route_table_id": "rtb-07e854cc0d8cdbf1f",
            "subnet_id": "subnet-08d7bcdddf38dc4c4"
          },
          "dependencies": [
            "aws_internet_gateway.internetGateway",
            "aws_route_table.publicroute_ps2",
            "aws_subnet.ps2",
            "aws_vpc.eksvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654482536:security-group/sg-092721ea8f52c98b6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-092721ea8f52c98b6",
            "ingress": [],
            "name": "all_worker_management20240712125843948800000005",
            "name_prefix": "all_worker_management",
            "owner_id": "654654482536",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c565723e5aec997a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eksvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-1706750966",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-092721ea8f52c98b6",
            "security_group_rule_id": "sgr-0f02002cae11b551a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "aws_vpc.eksvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8",
              "172.16.0.0/12",
              "192.168.0.0/16"
            ],
            "description": "allow inbound traffic from eks",
            "from_port": 0,
            "id": "sgrule-924341706",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-092721ea8f52c98b6",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "aws_vpc.eksvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654482536:subnet/subnet-04aeab193f540edd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04aeab193f540edd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654482536",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privatesubnet-useast-1c"
            },
            "tags_all": {
              "Name": "privatesubnet-useast-1c"
            },
            "vpc_id": "vpc-0c565723e5aec997a"
          },
          "dependencies": [
            "aws_vpc.eksvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654482536:subnet/subnet-092c8d14f0f181fe2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092c8d14f0f181fe2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654482536",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privatesubnet-useast-1d"
            },
            "tags_all": {
              "Name": "privatesubnet-useast-1d"
            },
            "vpc_id": "vpc-0c565723e5aec997a"
          },
          "dependencies": [
            "aws_vpc.eksvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ps1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654482536:subnet/subnet-0e34d4ab8f799c81d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e34d4ab8f799c81d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654482536",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicsubnet1"
            },
            "tags_all": {
              "Name": "publicsubnet1"
            },
            "vpc_id": "vpc-0c565723e5aec997a"
          },
          "dependencies": [
            "aws_vpc.eksvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ps2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654482536:subnet/subnet-08d7bcdddf38dc4c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d7bcdddf38dc4c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654482536",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicsubnet2"
            },
            "tags_all": {
              "Name": "publicsubnet2"
            },
            "vpc_id": "vpc-0c565723e5aec997a"
          },
          "dependencies": [
            "aws_vpc.eksvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eksvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654482536:vpc/vpc-0c565723e5aec997a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0729d762b03cd0a07",
            "default_route_table_id": "rtb-063d2e2ad3f54d4ee",
            "default_security_group_id": "sg-0e7415377387e8586",
            "dhcp_options_id": "dopt-0982a0e1c3cefd4d1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c565723e5aec997a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-063d2e2ad3f54d4ee",
            "owner_id": "654654482536",
            "tags": {
              "Name": "VPCforEksProject"
            },
            "tags_all": {
              "Name": "VPCforEksProject"
            }
          }
        }
      ]
    }
  ]
}